--- a/package.xml
+++ b/package.xml
@@ -15,7 +15,7 @@
   <license>BSD 3-Clause</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-  <depend>pybind11_vendor</depend>
+  <depend>pybind11</depend>
   <depend>shared_memory</depend>
 
   <export>
